# argus

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
cmake/: Dependencies.cmake  DependencyFinder.cmake  DownloadUsingCPM.cmake  Sanitizers.cmake  SimdUtils.cmake  TargetUtils.cmake
cmake/dependencies/: AdaptiveCpp.cmake  Boost.cmake  FlatMap.cmake  argparse.cmake  assimp.cmake  concurrentqueue.cmake  doctest.cmake  eigen.cmake  glaze.cmake  pybind11.cmake  readerwriterqueue.cmake  spdlog.cmake
cmake/helpers/: BuildDirHelper.cmake
scripts/: common.py  format.py  lint.py
src/: CMakeLists.txt
src/algo/: CMakeLists.txt
src/algo/src/: main.cpp
src/algo/tests/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/capi/: CMakeLists.txt
src/bindings/capi/tests/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt
src/bindings/python/src/: module.cpp  pch.hpp
src/bindings/python/tests/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/argus/common/: scene.hpp
src/common/include/argus/common/config/: argparse_policy.hpp  argus.hpp  config.hpp  lidar.hpp  mirror.hpp  optimizer.hpp  paths.hpp  policy.hpp  toml_policy.hpp
src/common/src/: pch.hpp
src/common/src/config/: argparse_policy.cpp  argus.cpp  config.cpp  lidar.cpp  mirror.cpp  optimizer.cpp  paths.cpp  toml_policy.cpp
src/common/tests/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/argus/: assert.hpp  compiler.hpp  cstring_view.hpp  platform.hpp  stacktrace.hpp
src/core/include/argus/container/: static_string.hpp
src/core/include/argus/log/: config.hpp  logger.hpp
src/core/include/argus/utils/: filesystem.hpp  hash.hpp  macro.hpp  type_info.hpp
src/core/src/: assert.cpp  pch.hpp  stacktrace.cpp
src/core/src/log/: logger.cpp
src/core/tests/: CMakeLists.txt  assert.cpp  compiler.cpp  platform.cpp  stacktrace.cpp
src/core/tests/container/: static_string.cpp
src/core/tests/log/: config.cpp  logger.cpp
src/core/tests/utils/: filesystem.cpp  hash.cpp  macro.cpp  type_info.cpp
src/renderer/: CMakeLists.txt
src/renderer/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/bindings/: CMakeLists.txt
tests/bindings/capi/: CMakeLists.txt  main.c
tests/bindings/python/: CMakeLists.txt  main.py
